<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".landingpage.LandingActivity">

    <ImageView
        android:id="@+id/img_landing"
        android:layout_width="wrap_content"
        android:layout_height="269dp"
        android:layout_gravity="center"
        android:layout_margin="32dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:src="@drawable/image_welcome"
        app:layout_constraintBottom_toTopOf="@+id/tv_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_welcome"
        style="@style/HeadlineMedium.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:text="@string/welcome_to_dicoding_story"
        android:textColor="@color/main_dark"
        app:layout_constraintStart_toStartOf="@+id/img_landing"
        app:layout_constraintTop_toBottomOf="@+id/img_landing"
        tools:alpha="100" />

    <TextView
        android:id="@+id/tv_welcomeDesc"
        style="@style/TitleMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:alpha="0"
        android:justificationMode="inter_word"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:text="@string/welcome_desc"
        android:textColor="@color/main_dark"
        app:layout_constraintStart_toStartOf="@+id/tv_welcome"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome"
        tools:alpha="100" />

    <ImageButton
        android:id="@+id/btn_next"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:alpha="0"
        android:background="@drawable/next_button"
        android:contentDescription="@string/next_desc"
        app:layout_constraintBottom_toTopOf="@+id/img_wave"
        app:layout_constraintEnd_toEndOf="@+id/tv_welcomeDesc"
        tools:alpha="100" />

    <ImageView
        android:id="@+id/img_wave"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:alpha="0"
        android:scaleType="center"
        android:src="@drawable/wave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:alpha="100" />


</androidx.constraintlayout.widget.ConstraintLayout>